fix: update the swagger with new fields
